--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic');
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -9,49 +11,16 @@ body {
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,Roboto,Open Sans,Helvetica Neue,Noto Sans Armenian,Noto Sans Bengali,Noto Sans Cherokee,Noto Sans Devanagari,Noto Sans Ethiopic,Noto Sans Georgian,Noto Sans Hebrew,Noto Sans Kannada,Noto Sans Khmer,Noto Sans Lao,Noto Sans Osmanya,Noto Sans Tamil,Noto Sans Telugu,Noto Sans Thai,sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 600;
-  line-height: 1.25;
-  margin-bottom: 16px;
-  margin-top: 24px;
-}
-
-h1 {
-  font-size: 2em;
-  border-bottom: 1px solid #eaecef;
-  padding-bottom: 0.3em;
-}
-h3{
-  font-size: 1.25em;
-}
-p {
-  margin-bottom: 16px;
-  margin-top: 0;
-}
-pre {
-  background-color: #f6f8fa;
-  border-radius: 3px;
-  font-size: 85%;
-  line-height: 1.45;
-  overflow: auto;
-  padding: 16px;
-  margin-bottom: 16px;
-  margin-top: 0;
-  user-select: text;
-}
-a:hover {
-  text-decoration: underline;
-}
-a:active,
-a:hover {
-  outline-width: 0;
-}
 a {
-  color: #0366d6;
-  text-decoration: none;
+	color: rgb(0,100,200);
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 a:visited {
@@ -68,9 +37,10 @@ input, button, select, textarea {
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
-	border: 1px solid #ccc;
-  border-radius: 2px;
-  margin-bottom: 16px;
+    border: 1px solid #ccc;
+    background-color: #fafbfc;
+    border-radius: 2px;
+    margin-bottom: 16px;
 }
 input[type="text"] {
   background-color: #fafbfc;
